--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,20 @@
-# Node.js
+# Node modules
 node_modules/
-npm-debug.log
-yarn-error.log
 
 # Logs
 logs/
 *.log
 npm-debug.log*
 
-# Dependency directories
-node_modules/
-jspm_packages/
+# Build directories
+dist/
+build/
 
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# dotenv environment variables file
+# Environment variables
 .env
 
-# MacOS
+# Ignore Mac system files
 .DS_Store
 
-# Windows
+# Ignore Windows system files
 Thumbs.db
-ehthumbs.db
-
-# Editor directories and files
-.vscode/
-.idea/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
